# minijail_example

./: drop_privs.cpp  meson.build  minijail.sh
subprojects/minijail/: meson.build
